// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="Inline-sc-1rz1cju-0 csCGum"
>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 RywfI"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="Inline-sc-1rz1cju-0 csCGum"
>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 RywfI"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 kcMJfs"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 dkqxIU"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 cDNdGw"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="Inline-sc-1rz1cju-0 csCGum"
>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 rQEQV"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 gmbbZl"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 iHsMgF"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 RywfI"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 VvzAU"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;
